--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -11,25 +11,15 @@ jobs:
   build:
     name: "Test and Lint"
     runs-on: ubuntu-latest
-    env:
-      NIGHTLY: nightly-2022-11-02 # Fix version to prevent cache misses with nightly changes
     steps:
       - name: Rust Setup
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           target: wasm32-unknown-unknown
           override: true
           components: rustfmt, clippy
-
-      - name: Install Nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ env.NIGHTLY }}
-          target: wasm32-unknown-unknown
-
       - name: Install protoc
         run: |
           sudo apt-get install -y protobuf-compiler
@@ -38,20 +28,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Rustfmt
-        uses: actions-rs/cargo@v1
-        with:
-          toolchain: stable
-          command: fmt
-          args: --all --check
-      
-      - name: Check Build
-        run: |
-          SKIP_WASM_BUILD=1 cargo check --release
+        run: cargo fmt --all -- --check
+      - name: Clippy
+        run: cargo clippy --all --features runtime-benchmarks
 
       - name: Run tests
         run: cargo test --locked --verbose --all
-      
       - name: Ensure benchmarking compiles
-        run: >
-          pushd node &&
-          cargo check --release --features=runtime-benchmarks
+        run: cargo check --release --features=runtime-benchmarks
