--- a/zombienet-config/rococo-local-config.toml
+++ b/zombienet-config/rococo-local-config.toml
@@ -5,7 +5,6 @@ default_command = "./bin/polkadot"
   [[relaychain.nodes]]
   name = "alice"
   validator = true
-  ws_port = 9900
 
   [[relaychain.nodes]]
   name = "bob"
@@ -16,9 +15,7 @@ id = 2000
 addToGenesis = true
 cumulus_based = true
 
-  [[parachains.collators]]
-  name = "parachain-collator-evm-tracing"
-  command = "./bin/parachain-template-node"
-  args = ["--ethapi=debug,trace,txpool"]
-  ws_port = 9944
-  rpc_port = 8545
+  [parachains.collator]
+  name = "parachain-collator01"
+  command = "./target/release/parachain-template-node"
+  rpc_port = 9933
