uplift deps to v0.9.39

--- a/zombienet-config/rococo-local-config.toml
+++ b/zombienet-config/rococo-local-config.toml
@@ -1,6 +1,6 @@
 [relaychain]
 chain = "rococo-local"
-default_command = "./bin/polkadot"
+default_command = "../bin/polkadot"
 
   [[relaychain.nodes]]
   name = "alice"
